# routematch

./: .dockerignore  .gitignore  Dockerfile  README.md  SYSTEM_DESIGN.md  detail.md  docker-compose.yml  eda.ipynb  instruction.md  main.py  pyproject.toml
app/: client.py  model.py
monitor/: prometheus.yml
scratch/: test_dispatch_engine.py
simulation/: driver_simulator.py  hydrate_redis.py
source/: README.md
source/infrastructure/: README.md  docker-compose.yml
source/infrastructure/prometheus/: prometheus.yml
source/services/dispatch-engine/: Dockerfile  README.md  go.mod  go.sum
source/services/dispatch-engine/cmd/: main.go
source/services/dispatch-engine/internal/config/: config.go
source/services/dispatch-engine/internal/db/: client.go
source/services/dispatch-engine/internal/kafka/: client.go
source/services/dispatch-engine/internal/redis/: client.go
source/services/dispatch-engine/internal/worker/: worker.go
source/services/driver-state/: Dockerfile  README.md  go.mod  go.sum
source/services/driver-state/cmd/server/: main.go
source/services/driver-state/cmd/testclient/: main.go
source/services/driver-state/internal/config/: config.go
source/services/driver-state/internal/redis/: client.go
source/services/driver-state/internal/server/: server.go
source/services/ml-batch/: Dockerfile  README.md  pyproject.toml
source/services/ml-batch/app/: config.py  consumer.py  main.py  optimizer.py
source/services/order-gateway/: Dockerfile  README.md  pyproject.toml
source/services/order-gateway/app/: __init__.py  api.py  service.py  worker.py
source/shared/contracts/: README.md
source/shared/contracts/kafka/: README.md
source/shared/database/: README.md  flyway.conf
source/shared/database/migrations/: README.md  V1__baseline_schema.sql  V2__operational_state_and_monitoring.sql
source/shared/libs/go/: README.md  go.mod
source/shared/libs/python/: README.md
source/shared/proto/: README.md
source/shared/proto/v1/: driver_state_service.proto
sql/: schema.sql
src/: data_simulator.py  feature_engineering.py  hydrate_redis.py  retrieval_service.py
src/ranking_engine/: draft_model.py  feature_engineering.py  training_model.py
src/retreival_engine/: retrieval_service.py
src/simulation/: generation.py
(+12 files in other folders)
