[project]
name = "routematch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.121.3",
    "h3>=4.3.1",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "prometheus-client>=0.24.1",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.4",
    "python-dotenv>=1.2.1",
    "redis>=7.1.0",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "uvicorn>=0.38.0",
    "xgboost>=3.1.2",
]

[dependency-groups]
dev = [
    "black>=25.11.0",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.7",
    "seaborn>=0.13.2",
]

# Define the custom PyTorch CPU index
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
