[project]
name = "ml-batch"
version = "0.1.0"
description = "ML Batch & Optimization Service"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "aiokafka>=0.11.0",
    "grpcio>=1.60.0",
    "grpcio-tools>=1.60.0",
    "protobuf>=5.26.1",
    "redis>=5.0.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "xgboost>=2.0.0",
    "scikit-learn>=1.4.0",
    "scipy>=1.12.0",
    "joblib>=1.3.2",
    "mlflow>=2.10.0",
    "python-dotenv>=1.0.1",
    "h3>=3.7.6",
    "prometheus-fastapi-instrumentator>=7.0.0"
]
